@@ -19,6 +19,7 @@
 .. _`pytest_tmpdir.py`: http://bitbucket.org/hpk42/py-trunk/raw/1.2.1/py/_plugin/pytest_tmpdir.py
 .. _`terminal`: terminal.html
 .. _`pytest_hooklog.py`: http://bitbucket.org/hpk42/py-trunk/raw/1.2.1/py/_plugin/pytest_hooklog.py
+.. _`capturelog`: capturelog.html
 .. _`junitxml`: junitxml.html
 .. _`pytest_skipping.py`: http://bitbucket.org/hpk42/py-trunk/raw/1.2.1/py/_plugin/pytest_skipping.py
 .. _`checkout the py.test development version`: ../../install.html#checkout
@@ -35,6 +36,7 @@
 .. _`recwarn`: recwarn.html
 .. _`pytest_pdb.py`: http://bitbucket.org/hpk42/py-trunk/raw/1.2.1/py/_plugin/pytest_pdb.py
 .. _`monkeypatch`: monkeypatch.html
+.. _`coverage`: coverage.html
 .. _`resultlog`: resultlog.html
 .. _`pytest_junitxml.py`: http://bitbucket.org/hpk42/py-trunk/raw/1.2.1/py/_plugin/pytest_junitxml.py
 .. _`django`: django.html
